--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1,229 +1,215 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300;500&display=swap');
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+@charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@300;500&display=swap");
+/*--------VARIABLES--------------*/
+/*----------@import para SASS-----------*/
+/*------------Reseteos de Estilos--------------*/
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-body{
-    font-family: Roboto;
-    background-color: #000;
+body {
+  font-family: Roboto;
+  background-color: #000;
 }
 
 /* Estilos para El Navegador ---------------------------------------------------------------- */
-
-.header{
-    background-color: #111;
-    position: sticky;
-    top: 0;  
-    z-index: 10;
+.header {
+  background-color: #111;
+  position: sticky;
+  top: 0;
+  z-index: 10;
 }
-.logo{
-    margin-left: 30px;
-    padding: 10px;
-    width: 150px;
+.header .logo {
+  margin-left: 30px;
+  padding: 10px;
+  width: 150px;
 }
-
-.navbar-nav a{
-    color: #fff;
+.header .colorH {
+  background-color: #333;
 }
-.nav-item :hover {
-    color: #f00;
+.header .desplegable {
+  background-color: #111;
 }
-.navbar-nav .activar{
-    color: #f00;
+.header .navbar-nav a {
+  color: #fff;
 }
-.color{
-    background-color: #333;
+.header .navbar-nav a:hover {
+  color: #f00;
 }
-.desplegable{
-    background-color: #111;
+.header .navbar-nav .activar {
+  color: #f00;
 }
 
 /* estilos para el INDEX ----------------------------------------------------------*/
-
-.imgCarrusel{
-    width: 100%;
-    max-height: 500px;
+.imgCarrusel {
+  width: 100%;
+  max-height: 500px;
 }
 
-.texto25años{
-    padding: 20px;
-    text-align: center;
-    color: #f00;
-    font-size: 30px;
+.texto25años {
+  padding: 20px;
+  text-align: center;
+  color: #f00;
+  font-size: 30px;
 }
 
 .card {
-    border-radius: 30px;
-    box-shadow: 1px 1px 20px  rgba(255, 0, 0, 0.281);
-    align-items: center; 
-    background-color: transparent;
+  border-radius: 30px;
+  box-shadow: 1px 1px 20px rgba(255, 0, 0, 0.281);
+  align-items: center;
+  background-color: transparent;
 }
-
-.card__img{    
-    width: 30%;
-    margin: 10px;
+.card .card__img {
+  width: 30%;
+  margin: 10px;
 }
-
-.card__info{
-    padding: 30px;
-	text-align: center;
-    color: #fff;
+.card .card__info {
+  padding: 30px;
+  text-align: center;
+  color: #fff;
 }
 
 /* estilos para SERVICIOS ---------------------------------------------------------- */
-
-.contenedorServicios{
-    color: #fff;
+.contenedorServicios {
+  color: #fff;
 }
-.flexReverse{
-    flex-direction: row-reverse;
+.contenedorServicios .tituloServicios {
+  margin: 40px;
+  text-align: center;
 }
-
-.tituloServicios{
-    margin: 40px;
-    text-align: center;
+.contenedorServicios .parrafoServicios {
+  margin: 5px 30px;
 }
-.parrafoServicios{
-    margin: 5px 30px;
+.contenedorServicios .imgServicios {
+  height: 50%;
 }
 
-.imgServicios{
-    height: 50%;
+.flexReverse {
+  flex-direction: row-reverse;
 }
 
 /* estilos para GALERIA ----------------------------------------------------------- */
-
-
-.tituloGaleria{
-    color: #f00;
+.tituloGaleria {
+  color: #f00;
 }
-.infoGaleria{
-    color: #fff;
-    text-align: center;
-    margin: 5px;
+
+.infoGaleria {
+  color: #fff;
+  text-align: center;
+  margin: 5px;
 }
 
 /* estilos para NOSOTROS --------------------------------------------------------------*/
-
-.fondoNosotros{
-    background-image: url(../image/nosotros.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
+.fondoNosotros {
+  background-image: url(../image/nosotros.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
-.infoNosotros{
-    color: #fff;
+.infoNosotros {
+  color: #fff;
 }
-.imgCaras img{
-    width: 150px;
-    margin: 10px 40px;
+
+.imgCaras {
+  color: #fff;
+  display: flex;
+  align-items: center;
 }
-.imgCaras{
-    color: #fff;
-    display: flex;
-    align-items: center;
+.imgCaras img {
+  width: 150px;
+  margin: 10px 40px;
 }
 
 /* estilos para CONTACTOS -------------------------------------------------------------- */
-
-
-.formulario img{
-    background-color: #fff;
-    width: 30%;
-    padding: 15px;
-    border-radius: 50%;
-    margin: 10px;
+.formulario {
+  padding: 20px 0px;
+  background-color: #222;
+  border: 20px solid #000;
+  outline: 3px solid #f00;
+}
+.formulario img {
+  background-color: #fff;
+  width: 30%;
+  padding: 15px;
+  border-radius: 50%;
+  margin: 10px;
+}
+.formulario .formBox {
+  border: none;
+  border-bottom: 3px solid #f00;
+  background: transparent;
+  color: #fff;
+}
+.formulario .formBox:focus {
+  background: linear-gradient(to bottom, transparent, #111);
+  outline: none;
+  border-bottom: 3px solid rgb(255, 0, 0);
+}
+.formulario textarea {
+  min-height: 150px;
+  resize: none;
+}
+.formulario input[type=submit] {
+  background-color: #f00;
+  border-color: none;
+  border-radius: 7px;
+  padding: 12px;
 }
 
-.formulario{
-    padding: 20px 0px; 
-    background-color: #222;
-    border: 20px solid #000;
-    outline: 3px solid rgba(255, 0, 0, 0.8);
-}
-.formBox{
-    border: none;
-    border-bottom: 3px solid rgba(255, 0, 0, 0.8);
-    background: transparent;
-    color: #fff;
-}
-
-.formBox:focus {
-	background: linear-gradient(to bottom, transparent,#111);
-	outline: none;
-	border-bottom: 3px solid rgb(255, 0, 0);
-}
-.formulario textarea{
-    min-height: 150px;
-    resize: none;
-}
-.formulario input[type="submit"]{
-	background-color:rgba(255, 0, 0, 0.8) ;
-	border-color: none;
-    border-radius: 7px;
-	padding: 12px;
-}
-
-.infoContactos{
-    color: #fff;
+.infoContactos {
+  color: #fff;
 }
 
 /* Estilo Footer --------------------------------------------------------------------------- */
-
-footer{
-    display: flex;
-    justify-content: space-between;
-    background-color: #111;
-    padding: 0 30px;
-    align-items: center;
+footer {
+  display: flex;
+  justify-content: space-between;
+  background-color: #111;
+  padding: 0 30px;
+  align-items: center;
+}
+footer .contactos__footer {
+  color: #fff;
+  padding: 10px;
+}
+footer .contactos__footer p {
+  margin: 5px;
+  text-align: center;
+}
+footer h3 {
+  color: #bbb;
+  margin: 10px;
+  font-size: 16px;
+}
+footer ul {
+  list-style: none;
+}
+footer ul li {
+  margin: 7px;
+}
+footer ul li a {
+  text-decoration: none;
+  color: #fff;
+}
+footer ul li a:hover {
+  color: #888;
+}
+footer ul li a img {
+  width: 15px;
+  margin-left: 10px;
 }
 
-footer h3{
-    color: #bbb;
-    margin: 10px;
-    font-size: 16px;
-}
-.contactos__footer{
-    color: #fff;
-    padding: 10px ;
-}
-
-.contactos__footer p{
-    margin: 5px;
-    text-align: center;
-}
-footer ul{
-    list-style: none;
-}
-footer ul :hover{
-    color: #888;
-}
-footer a{
-    text-decoration: none;
-    color: #fff;
-}
-
-.redes__footer ul li{
-    margin: 7px;
-}
-
-.redes__footer img{
-    width: 15px;
-    margin-left: 10px;
-}
 /* ------------------------------------@media 576px-------------------- */
-@media (max-width: 576px){
-
-    footer{
-        flex-direction: column;
-        order: 1;
-    }
-    .logoFooter{
-        order: 3;
-        margin: 10px;
-    }
-}
+@media (max-width: 576px) {
+  footer {
+    flex-direction: column;
+    order: 1;
+  }
+  footer .logoFooter {
+    order: 3;
+    margin: 10px;
+  }
+}/*# sourceMappingURL=style.css.map */
