--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -28,7 +28,7 @@ body {
   width: 150px;
 }
 .header .colorH {
-  background-color: #333;
+  background-color: #444;
 }
 .header .desplegable {
   background-color: #111;
@@ -42,8 +42,32 @@ body {
 .header .navbar-nav .activar {
   color: #f00;
 }
+.header .redes__nav ul {
+  display: flex;
+  justify-content: end;
+  list-style: none;
+  margin: 20px;
+}
+.header .redes__nav ul img {
+  width: 24px;
+  margin: 0 5px;
+}
 
+@media (max-width: 992px) {
+  .redes__nav {
+    display: none;
+  }
+}
 /* estilos para el INDEX ----------------------------------------------------------*/
+.tituloPrincipal {
+  color: #fff;
+  position: absolute;
+  top: 300px;
+  left: 60px;
+  z-index: 5;
+  font-weight: 700;
+}
+
 .imgCarrusel {
   width: 100%;
   max-height: 500px;
@@ -72,6 +96,12 @@ body {
   color: #fff;
 }
 
+@media (max-width: 576px) {
+  .tituloPrincipal {
+    top: 25%;
+    left: 8%;
+  }
+}
 /* estilos para SERVICIOS ---------------------------------------------------------- */
 .contenedorServicios {
   color: #fff;
@@ -146,7 +176,7 @@ body {
 .formulario .formBox:focus {
   background: linear-gradient(to bottom, transparent, #111);
   outline: none;
-  border-bottom: 3px solid rgb(255, 0, 0);
+  border-bottom: 3px solid #f00;
 }
 .formulario textarea {
   min-height: 150px;
