--- a/asset/scss/_index.scss
+++ b/asset/scss/_index.scss
@@ -1,6 +1,16 @@
 
 /* estilos para el INDEX ----------------------------------------------------------*/
 
+.tituloPrincipal{
+    color: #fff;
+    position: absolute;
+    top:300px;
+    left:60px;
+    z-index: 5;
+    font-weight: 700;
+}
+
+
 .imgCarrusel{
     width: 100%;
     max-height: 500px;
@@ -32,5 +42,14 @@
 
 }
 
+@media (max-width:576px){
+    .tituloPrincipal{
+  
+        top:25%;
+        left:8%;
+     
+    }
+    
+}
 
 
