--- a/asset/scss/_nav.scss
+++ b/asset/scss/_nav.scss
@@ -12,7 +12,7 @@
         width: 150px;
     }
     .colorH{
-        background-color: #333;
+        background-color: #444;
     }
     .desplegable{
         background-color: #111;
@@ -28,6 +28,22 @@
             color: $colorPrincipal;
         }
     } 
+    .redes__nav ul{
+        display: flex;
+        justify-content: end;
+        list-style: none;
+        margin: 20px;
+        img{
+            width: 24px;
+            margin: 0 5px;
+        }
+    }
+}
+
+@media(max-width:992px){
+    .redes__nav{
+        display: none;
+    }
 }
 
 
