--- a/asset/scss/style.scss
+++ b/asset/scss/style.scss
@@ -1,15 +1,14 @@
+
+/*---------------------@import FUENTES--------------------- */
+
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300;500&display=swap');
-
-/*--------VARIABLES--------------*/
-$colorPrincipal: #f00;
-$colorTexto: #fff;
-
 
 
 /*----------@import para SASS-----------*/
 
 @import "reset";
+@import "variables";
 @import "nav";
 @import "index";
 @import "servi";
