--- a/asset/scss/_nosotros.scss
+++ b/asset/scss/_nosotros.scss
@@ -17,7 +17,6 @@
     align-items: center;
 
     img{
-        width: 150px;
-        margin: 10px 40px;
+        @include tamanio (150px, 10px 40px);
     }
 }
