agregue link redes sociales y modifique la jerarquia de algunas etiqutas H

--- a/asset/scss/_nav.scss
+++ b/asset/scss/_nav.scss
@@ -12,7 +12,7 @@
         width: 150px;
     }
     .colorH{
-        background-color: #444;
+        background-color: $colorPrincipal;
     }
     .desplegable{
         background-color: #111;
