--- a/asset/scss/_servi.scss
+++ b/asset/scss/_servi.scss
@@ -9,6 +9,11 @@
         margin: 40px;
         text-align: center;
     }
+    .titulosH3{
+        font-size: 18px;
+        margin: 25px 30px;
+        
+    }
     .parrafoServicios{
         margin: 5px 30px;
     }
