--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -29,7 +29,7 @@ body {
   width: 150px;
 }
 .header .colorH {
-  background-color: #444;
+  background-color: #f00;
 }
 .header .desplegable {
   background-color: #111;
@@ -110,6 +110,10 @@ body {
 .contenedorServicios .tituloServicios {
   margin: 40px;
   text-align: center;
+}
+.contenedorServicios .titulosH3 {
+  font-size: 18px;
+  margin: 25px 30px;
 }
 .contenedorServicios .parrafoServicios {
   margin: 5px 30px;
