--- a/asset/scss/_index.scss
+++ b/asset/scss/_index.scss
@@ -28,6 +28,9 @@
     box-shadow: 1px 1px 20px  rgba(255, 0, 0, 0.281);
     align-items: center; 
     background-color: transparent;
+    width: 20%;
+    margin:30px 0;
+    
 
     .card__img{  
         @include tamanio (30%,10px);  
@@ -41,12 +44,19 @@
 
 }
 
+@media (max-width:992px){
+    .card{
+        width:40%
+    }
+}
+
 @media (max-width:576px){
     .tituloPrincipal{
-  
         top:25%;
         left:5%;
-     
+    }
+    .card{
+        width: 80%;
     }
     
 }
