--- a/asset/scss/_footer.scss
+++ b/asset/scss/_footer.scss
@@ -23,6 +23,7 @@ footer{
         color: #bbb;
         margin: 10px;
         font-size: 16px;
+        text-align: center;
     }
     ul{
         list-style: none;
