--- a/asset/scss/_servi.scss
+++ b/asset/scss/_servi.scss
@@ -2,6 +2,13 @@
 
 /* estilos para SERVICIOS ---------------------------------------------------------- */
 
+.tituloP{
+    color: $colorPrincipal;
+    text-align: center;
+    margin-top: 15px;
+    font-size: 36px;
+    font-weight: 800;
+}
 .contenedorServicios{
     color: $colorTexto;
 
